# moveit_task_constructor

demo/: CMakeLists.txt  package.xml
demo/config/: custom_rosconsole.config  dual_panda_config.yaml  mtc_dual.rviz  mtc_dual_2.rviz  mtc_dual_dloh.rviz  mtc_dual_linem.rviz  trajectory_controller.yaml
demo/include/moveit_task_constructor_demo/: dlo_collision_handling.h  dlo_handling.h  dual_pickplace.h  dual_with_main.h  line_collision_tracking.h  line_object_tracking.h  pick_place_task_sofia.h
demo/launch/: demo.launch  demo_backup.launch  demo_singular.launch  dlo_collision_handling.launch  dlo_handling.launch  dual_demo.launch  dual_pickplace.launch  line_collision_tracking.launch  pickplace.launch
demo/src/: dlo_collision_handling.cpp  dlo_collision_handling_demo.cpp  dlo_handling.cpp  dlo_handling_demo.cpp  dual_pickplace.cpp  dual_pickplace_demo.cpp  dual_with_main.cpp  line_collision_tracking.cpp  line_collision_tracking_demo.cpp  line_object_tracking.cpp  line_tracking.cpp  nonmtc_dual_pickplace.cpp  pick_place_demo_sofia.cpp  pick_place_task_sofia.cpp
